--- a/style.css
+++ b/style.css
@@ -31,14 +31,21 @@ body {
     justify-content: space-evenly;
     align-items: center;
     cursor: pointer;
-    padding: 30px 0;
+    padding: 30px 0 25px 0;
     border-top: 1px solid rgb(74, 92, 0);
     border-bottom: 1px solid rgb(74, 92, 0);
 }
 
+.nav-li {
+    font-size: 1.3rem;
+    padding-bottom: 2px;
+    border-bottom: 3px solid transparent;
+}
+
 .nav-li:hover {
-    text-decoration: underline;
+    /* text-decoration: underline; */
     color: rgb(136, 136, 0);
+    border-bottom: 3px solid rgb(136, 136, 0);
 }
 
 main {
@@ -90,6 +97,8 @@ article {
 
 article:hover {
     box-shadow: 0px 0px 10px rgb(131, 131, 118);
+    transform: scale(1.05);
+    transition: transform 0.5s ease-in-out;
 }
 
 article .article-title {
@@ -108,6 +117,14 @@ article .article-text {
     font-size: 0.8rem;
     padding: 1rem 0 2rem 0;
 }
+
+article .article-link-container {
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    margin-left: 20px;
+}
+
 article .article-link:hover {
     cursor: pointer;
     color: rgb(108, 108, 0);
